Firsty operational POC up to CARML Mapping execution